Clean up Argeo Init